<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/radius_gris"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/evenements"
            android:textSize="30dp"
            android:enabled="false"

            android:background="@drawable/radius_gris"
            android:textStyle="bold|italic"
            android:textColor="@color/bleu"


            />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annee_2"
                    android:textSize="30dp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/bleu"
                    android:enabled="false"

                    android:background="#ffff"
                    ></EditText>
            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/robotsevent"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/robot"
                        android:text="@string/robots_2020"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#ffff"></Button>
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/furom"
                        android:text="@string/furom_2020"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#ffff"></Button>
                    <Button
                        android:layout_marginRight="20dp"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/entreprise"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:text="@string/visit_2020"
                        android:textColor="#ffff"></Button>


                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/annee_9"
                    android:textSize="30dp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="italic|bold"
                    android:enabled="false"

                    android:textColor="@color/bleu">

                </TextView>
            </LinearLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <Button

                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/robot"
                        android:text="@string/robots_2020"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#ffff"></Button>
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/furom"
                        android:text="@string/furom_2020"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#ffff"></Button>
                    <Button
                        android:layout_marginRight="20dp"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/entreprise"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:text="@string/visit_2020"
                        android:textColor="#ffff"></Button>


                </LinearLayout>
            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/annee_8"
                    android:textSize="30dp"
                    android:layout_marginLeft="5dp"
                    android:enabled="false"

                    android:textStyle="italic|bold"
                    android:textColor="@color/bleu">

                </TextView>
            </LinearLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <Button

                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/robot"
                        android:text="@string/robots_2020"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#ffff"></Button>
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/furom"
                        android:text="@string/furom_2020"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#ffff"></Button>
                    <Button
                        android:layout_marginRight="20dp"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/entreprise"
                        android:textStyle="bold|italic"
                        android:textSize="30dp"
                        android:text="@string/visit_2020"
                        android:textColor="#ffff"></Button>


                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>




</LinearLayout>